fix: Quinto ejercicio anidando ando

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -635,6 +635,10 @@ video {
   width: 0.5rem;
 }
 
+.w-2\/3 {
+  width: 66.666667%;
+}
+
 .min-w-\[240px\] {
   min-width: 240px;
 }
@@ -794,6 +798,11 @@ video {
 .bg-pink-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 231 243 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .object-cover {
